--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
-image: gitpod/workspace-full-vnc:branch-jx-vnc-openbox-1-desktop
+image: gitpod/workspace-full-vnc:branch-jx-update-gopls
 ports:
   - port: 5900
     onOpen: ignore
